# accela-mcp

./: .env.example  .gitignore  LICENSE  README.md  capabilities.yaml.example  manifest.json  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml  release-mcpb.yml
bundle/server/: launcher.py
docs/: INSTALL.md
scripts/: build-mcpb.sh
src/accela_mcp/: __init__.py  __main__.py  capabilities.py  cli.py  safety.py  server.py  settings.py
src/accela_mcp/api/: __init__.py  batch.py  client.py  errors.py  pagination.py
src/accela_mcp/auth/: __init__.py  flow.py  refresher.py  token_store.py
src/accela_mcp/observability/: __init__.py  logging_config.py
src/accela_mcp/tools/: __init__.py  _base.py  admin_escape.py  auth.py  discovery.py  documents_read.py  documents_write.py  fees_read.py  gis.py  inspections_read.py  inspections_write.py  payments_read.py  payments_write.py  people_read.py  property_read.py  records_read.py  records_write.py  reference_data.py  reports.py  search.py  workflow_read.py  workflow_write.py
src/accela_mcp/utils/: __init__.py  cache.py  ids.py  redaction.py
tests/: conftest.py
tests/integration/: conftest.py  test_sandbox.py
tests/unit/: test_batch.py  test_cache.py  test_capabilities.py  test_cli.py  test_client.py  test_errors.py  test_flow.py  test_ids.py  test_pagination.py  test_redaction.py  test_refresher.py  test_safety.py  test_server.py  test_settings.py  test_token_store.py
tests/unit/tools/: _helpers.py  test_admin_escape.py  test_auth.py  test_base.py  test_discovery.py  test_documents_read.py  test_documents_write.py  test_fees_read.py  test_gis.py  test_inspections_read.py  test_inspections_write.py  test_payments_read.py  test_payments_write.py  test_people_read.py  test_property_read.py  test_records_read.py  test_records_write.py  test_reference_data.py  test_reports.py  test_search.py  test_workflow_read.py  test_workflow_write.py
