[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "accela-mcp"
version = "0.4.0"
description = "Model Context Protocol server for the Accela Construct API"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Accela MCP Maintainers" }]
keywords = ["mcp", "accela", "civic-platform", "permits", "government"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0",
    "httpx[http2]>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "PyYAML>=6.0",
    "structlog>=24.1",
    "platformdirs>=4.0",
    "cryptography>=42.0",
    "click>=8.1",
    "tenacity>=8.2",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "freezegun>=1.5",
]

[project.scripts]
accela-mcp = "accela_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/Donatoni/accela-mcp"
Documentation = "https://github.com/Donatoni/accela-mcp#readme"
Issues = "https://github.com/Donatoni/accela-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/accela_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
    "SIM", # simplify
    "RUF", # ruff-specific
    "S",   # bandit (security)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # use of assert (fine in tests)
    "B008",  # function call in default argument (pydantic Field uses this)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S107", "N802"]

[tool.ruff.lint.isort]
known-first-party = ["accela_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:_pytest.*",
    # CliRunner invocations spin up nested asyncio.run() calls that
    # occasionally emit unclosed-socket / unclosed-event-loop ResourceWarnings
    # under Python 3.13. They are not bugs in our code; ignore.
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: real-API integration tests (gated on ACCELA_INTEGRATION_TEST=1)",
]

[tool.coverage.run]
branch = true
source = ["src/accela_mcp"]
omit = ["*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
